--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <li><a href="linkedin.com/in/juan-pablo-muraca-frontend-developer ">LinkedIn</a>
                     <img src="images/flecha.svg" alt="flecha" class="flecha">
                 </li>
-                <li><a href="CV-Juan Pablo Muraca.pdf">Instagram</a>
+                <li><a href="https://www.instagram.com/muracajp/">Instagram</a>
                     <img src="images/flecha.svg" alt="flecha" class="flecha">
                 </li>
-                <li><a href="">Currículo</a>
+                <li><a href="CV-Juan Pablo Muraca.pdf">Currículo</a>
                     <img src="images/flecha.svg" alt="flecha" class="flecha">
                 </li>
             </ul>
