--- a/index.html
+++ b/index.html
@@ -19,22 +19,18 @@
 
     <header id="header" class="header">
 
-        <div class="headerContainer">
+        <img src="images/indian-headdress-svgrepo-com.svg" alt="om logo" class="logos">
 
-            <a href="https://github.com/MuracaJP" class="nombreCompleto" target="blank">Juan Pablo Muraca</a>
+        <a href="https://github.com/MuracaJP" class="nombreCompleto" target="blank">Juan Pablo Muraca</a>
 
-            <nav>
-                <ul class="menuContainer">
-                    <li><a href="#sobreMi">Sobre mi</a></li>
-                    <li><a href="#skillsContainer">Skills</a></li>
-                    <li><a href="#hobbiesContainer">Hobbies</a> </li>
-                    <li><a href="#formacion">Formación</a></li>
-                    <li><a href="#experiencia">Proyectos</a></li>
-                    <li><a href="mailto:muracjp@gmail.com">muracjp@gmail.com</a></li>
-                </ul>
-            </nav>
-
-        </div>
+        <ul class="menu">
+            <li><a href="#sobre-mi-container">Sobre mi</a></li>
+            <li><a href="#skills-container">Skills</a></li>
+            <li><a href="#hobbies-container">Hobbies</a> </li>
+            <li><a href="#formacion-container">Formación</a></li>
+            <li><a href="#experiencia-container">Proyectos</a></li>
+            <li><a href="mailto:muracjp@gmail.com">muracjp@gmail.com</a></li>
+        </ul>
 
     </header>
     <!-- Fin Header -->
@@ -48,33 +44,32 @@
                     class="linksAlura" target="blank">Alura Latam</a>
             </h2>
 
-            <nav>
-                <ul class="contacto">
+            <ul class="contacto">
 
-                    <li><a href="https://github.com/MuracaJP" target="blank">Github</a>
-                        <img src="images/flecha.svg" alt="flecha" class="flecha">
-                    </li>
+                <li><a href="https://github.com/MuracaJP" target="blank">Github</a>
+                    <img src="images/flecha.svg" alt="flecha" class="flechas">
+                </li>
 
-                    <li><a href="linkedin.com/in/juan-pablo-muraca-frontend-developer " target="blank">LinkedIn</a>
-                        <img src="images/flecha.svg" alt="flecha" class="flecha">
-                    </li>
+                <li><a href="linkedin.com/in/juan-pablo-muraca-frontend-developer " target="blank">LinkedIn</a>
+                    <img src="images/flecha.svg" alt="flecha" class="flechas">
+                </li>
 
-                    <li><a href="https://www.instagram.com/muracajp/" target="blank">Instagram</a>
-                        <img src="images/flecha.svg" alt="flecha" class="flecha">
-                    </li>
+                <li><a href="https://www.instagram.com/muracajp/" target="blank">Instagram</a>
+                    <img src="images/flecha.svg" alt="flecha" class="flechas">
+                </li>
 
-                    <li><a href="CV-Juan Pablo Muraca.pdf" target="blank">Currículo</a>
-                        <img src="images/flecha.svg" alt="flecha" class="flecha">
-                    </li>
-                </ul>
-            </nav>
+                <li><a href="CV-Juan Pablo Muraca.pdf" target="blank">Currículo</a>
+                    <img src="images/flecha.svg" alt="flecha" class="flechas">
+                </li>
+            </ul>
+
         </div>
 
         <img src="images/perfil.jpg" alt="estrellas" class="perfil">
     </main>
     <!-- Fin sección principal -->
 
-    <section id="sobreMi" class="sobreMi">
+    <section id="sobre-mi-container" class="sobreMiContainer">
 
         <h2 class="tituloSobreMi">Sobre mi</h2>
 
@@ -100,7 +95,7 @@
     </section>
     <!-- Fin sección sobreMi -->
 
-    <section id="skillsContainer" class="skillsHobbies">
+    <section id="skills-container" class="skillsHobbies">
 
         <h2 class="skillsTitulo">Skills</h2>
 
@@ -132,7 +127,7 @@
         </div>
         <!-- Fin sección skills-->
 
-        <section id="hobbiesContainer" class="skillsHobbies">
+        <section id="hobbies-container" class="skillsHobbies">
 
             <h2 class="hobbiesTitulo">Hobbies</h2>
 
@@ -163,11 +158,11 @@
     </section>
     <!-- Fin sección hobbies -->
 
-    <section id="formacion" class="formacion">
+    <section id="formacion-container" class="formacionContainer">
 
         <h2 class="formacionTitulo">Formación académica</h2>
 
-        <div class="formacionContainer">
+        <div class="formacion">
             <div class="cursos">
                 <img src="images/colegio.jpg" alt="colegio parroquial San Carlos Borromeo" class="formacionImg">
                 <p class="nombreCurso">Bachillerato</p>
@@ -188,7 +183,7 @@
     <!-- Fin sección formación -->
 </body>
 
-<section id="experiencia" class="experiencia">
+<section id="experiencia-container" class="experienciaContainer">
 
     <h2 class="xpTitulo">Experiencia profesional</h2>
 
@@ -196,7 +191,7 @@
         <div class="proyectos">
             <img src="images/proyectos/ecologic.png" alt="foto página web" class="proyectoImg">
         </div>
-        <div>
+        <div class="detallesContainer">
             <p class="nombreProyecto">Ecologic - Landing page + galería de productos</p>
             <p>Desarrollo Web - Coderhouse</p>
             <button class="repoBtn"><a href="https://github.com/MuracaJP/Ecologic">Repositorio</a></button>
@@ -205,14 +200,17 @@
     </div>
 
     <div class="proyectosContainer">
-        <div class="proyectos">
-            <img src="images/proyectos/saludables.png" alt="foto página web" class="proyectoImg">
-        </div>
-        <div>
+
+        <div class="detallesContainer">
             <p class="nombreProyecto">Saludables tentaciones - Landing page + simulador de pedidos</p>
             <p>Javascript - Coderhouse</p>
-            <button class="repoBtn"><a href="https://github.com/MuracaJP/Saludables-Tentaciones">Repositorio</a></button>
+            <button class="repoBtn"><a
+                    href="https://github.com/MuracaJP/Saludables-Tentaciones">Repositorio</a></button>
             <button class="demoBtn"><a href="https://muracajp.github.io/Saludables-Tentaciones/">Ver demo</a></button>
+        </div>
+
+        <div class="proyectos">
+            <img src="images/proyectos/saludables.png" alt="foto página web" class="proyectoImg">
         </div>
     </div>
 
@@ -220,7 +218,7 @@
         <div class="proyectos">
             <img src="images/proyectos/la-cueva.png" alt="foto página web" class="proyectoImg">
         </div>
-        <div >
+        <div class="detallesContainer">
             <p class="nombreProyecto">La cueva - Landing page</p>
             <p>Proyecto real - Top 10 Desarrollo Web</p>
             <button class="repoBtn"><a href="https://github.com/MuracaJP/La-Cueva">Repositorio</a></button>
@@ -229,20 +227,57 @@
     </div>
 
     <div class="proyectosContainer">
+
+        <div class="detallesContainer">
+            <p class="nombreProyecto">Encriptador - Primer Challenge Alura Latam</p>
+            <p>Encriptador - Alura Latam</p>
+            <button class="repoBtn"><a
+                    href="https://github.com/MuracaJP/Primer-Challenge-Alura">Repositorio</a></button>
+            <button class="demoBtn"><a href="https://muracajp.github.io/Primer-Challenge-Alura/">Ver demo</a></button>
+        </div>
+
         <div class="proyectos">
             <img src="images/proyectos/primer-challenge.png" alt="foto página web" class="proyectoImg">
-        </div>
-        <div>
-            <p class="nombreProyecto">Ecologic - Landing page y galería de productos</p>
-            <p>Sitio web de productos ecológicos</p>
-            <button class="repoBtn"><a href="https://github.com/MuracaJP/Primer-Challenge-Alura">Repositorio</a></button>
-            <button class="demoBtn"><a href="https://muracajp.github.io/Primer-Challenge-Alura/">Ver demo</a></button>
         </div>
     </div>
 
 </section>
 <!-- Fin sección experiencia-->
 
+<section id="contacto-container" class="contactoContainer">
+
+    <div class="telefonoContainer">
+        <img src="images/telefono.png" alt="teléfono" class="telefonoImg">
+    </div>
+
+    <div class="formContainer">
+
+        <h2 class="contactoTitulo">Contacto</h2>
+
+        <p>¿Quieres contactarme?</p>
+        <p>Complete el siguiente formulario y me pondré en contacto con usted lo antes posible.</p>
+
+        <form action="" class="form">
+
+            <input type="text" id="nombre" placeholder="Nombre" class="nombre">
+
+            <input type="text" id="email" placeholder="E-mail" class="email">
+
+            <input type="text" id="asunto" placeholder="Asunto" class="asunto">
+
+            <input type="text" id="mensaje" placeholder="Mensaje" class="mensaje">
+
+            <button class="enviarMsj">Enviar mensaje</button>
+        </form>
+    </div>
+</section>
+<!-- Fin sección contacto-->
+
+<footer class="footer">
+    <h6>Desarrollado por: <a href="https://github.com/MuracaJP" class="gitHubLink" target="blank">Muracajp</a></h6>
+</footer>
+
 <a href="#header"><img src="images/up-arrow-svgrepo-com.svg" alt="flecha apuntando arriba" class="volverInicio"></a>
+
 
 </html>
