diseño adaptado para tablet realizado

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
     <header id="header" class="header">
 
-        <img src="images/indian-headdress-svgrepo-com.svg" alt="om logo" class="logos">
+        <div class="logoNombre">
 
-        <a href="https://github.com/MuracaJP" class="nombreCompleto" target="blank">Juan Pablo Muraca</a>
+            <img src="images/indian-headdress-svgrepo-com.svg" alt="indio logo" class="logoIndio">
+
+            <a href="https://github.com/MuracaJP" class="nombreCompleto" target="blank">Juan Pablo Muraca</a>
+        </div>
 
         <ul class="menu">
             <li><a href="#sobre-mi-container">Sobre mi</a></li>
@@ -31,7 +34,6 @@
             <li><a href="#experiencia-container">Proyectos</a></li>
             <li><a href="mailto:muracjp@gmail.com">muracjp@gmail.com</a></li>
         </ul>
-
     </header>
     <!-- Fin Header -->
 
@@ -62,7 +64,6 @@
                     <img src="images/flecha.svg" alt="flecha" class="flechas">
                 </li>
             </ul>
-
         </div>
 
         <img src="images/perfil.jpg" alt="estrellas" class="perfil">
@@ -101,57 +102,56 @@
 
         <div class="skillsContainer">
 
-            <div class="skill"><img src="images/html5-svgrepo-com.svg" alt="HTML5 logo" class="logos">
+            <div class="skillHobbie"><img src="images/html5-svgrepo-com.svg" alt="HTML5 logo" class="logos">
                 <p>Html5</p>
             </div>
 
-            <div class="skill"><img src="images/icons8-css3.svg" alt="css3 logo" class="logos">
+            <div class="skillHobbie"><img src="images/icons8-css3.svg" alt="css3 logo" class="logos">
                 <p>CSS</p>
             </div>
 
-            <div class="skill"><img src="images/sass-svgrepo-com.svg" alt="sass logo" class="logos">
+            <div class="skillHobbie"><img src="images/sass-svgrepo-com.svg" alt="sass logo" class="logos">
                 <p>Sass</p>
             </div>
 
-            <div class="skill"><img src="images/icons8-javascript.svg" alt="javascript logo" class="logos">
+            <div class="skillHobbie"><img src="images/icons8-javascript.svg" alt="javascript logo" class="logos">
                 <p>Javascript</p>
             </div>
 
-            <div class="skill"><img src="images/icons8-git.svg" alt="git logo" class="logos">
+            <div class="skillHobbie"><img src="images/icons8-git.svg" alt="git logo" class="logos">
                 <p>Git</p>
             </div>
 
-            <div class="skill"><img src="images/icons8-github.svg" alt="github logo" class="logos">
+            <div class="skillHobbie"><img src="images/icons8-github.svg" alt="github logo" class="logos">
                 <p>Github</p>
             </div>
         </div>
         <!-- Fin sección skills-->
 
-        <section id="hobbies-container" class="skillsHobbies">
+        <section id="hobbies-container">
 
             <h2 class="hobbiesTitulo">Hobbies</h2>
 
             <div class="hobbiesContainer">
 
-                <div class="skill"><img src="images/males-friends-hug-side-by-side-svgrepo-com.svg" alt="amigos logo"
-                        class="logos">
-                    <p>Amigos</p>
-                </div>
-
-                <div class="skill"><img src="images/headphones-svgrepo-com.svg" alt="auriculares" class="logos">
+                <div class="skillHobbie"><img src="images/headphones-svgrepo-com.svg" alt="auriculares" class="logos">
                     <p>Música</p>
                 </div>
 
-                <div class="skill"><img src="images/books-svgrepo-com.svg" alt="libros logo" class="logos">
+                <div class="skillHobbie"><img src="images/books-svgrepo-com.svg" alt="libros logo" class="logos">
                     <p>Lectura</p>
                 </div>
 
-                <div class="skill"><img src="images/yoga-svgrepo-com.svg" alt="yoga logo" class="logos">
+                <div class="skillHobbie"><img src="images/yoga-svgrepo-com.svg" alt="yoga logo" class="logos">
                     <p>Yoga</p>
                 </div>
 
-                <div class="skill"><img src="images/input-gaming-svgrepo-com.svg" alt="gaming logo" class="logos">
+                <div class="skillHobbie"><img src="images/input-gaming-svgrepo-com.svg" alt="gaming logo" class="logos">
                     <p>Juegos</p>
+                </div>
+
+                <div class="skillHobbie"><img src="images/soccer-svgrepo-com.svg" alt="gaming logo" class="logos">
+                    <p>Fútbol</p>
                 </div>
             </div>
         </section>
@@ -194,8 +194,11 @@
         <div class="detallesContainer">
             <p class="nombreProyecto">Ecologic - Landing page + galería de productos</p>
             <p>Desarrollo Web - Coderhouse</p>
-            <button class="repoBtn"><a href="https://github.com/MuracaJP/Ecologic">Repositorio</a></button>
-            <button class="demoBtn"><a href="https://muracajp.github.io/Ecologic/">Ver demo</a></button>
+            <div>
+                <button class="repoBtn"><a href="https://github.com/MuracaJP/Ecologic">Repositorio</a></button>
+                <button class="demoBtn"><a href="https://muracajp.github.io/Ecologic/">Ver demo</a></button>
+            </div>
+
         </div>
     </div>
 
@@ -204,9 +207,10 @@
         <div class="detallesContainer">
             <p class="nombreProyecto">Saludables tentaciones - Landing page + simulador de pedidos</p>
             <p>Javascript - Coderhouse</p>
-            <button class="repoBtn"><a
-                    href="https://github.com/MuracaJP/Saludables-Tentaciones">Repositorio</a></button>
-            <button class="demoBtn"><a href="https://muracajp.github.io/Saludables-Tentaciones/">Ver demo</a></button>
+            <div>
+                <button class="repoBtn"><a href="https://github.com/MuracaJP/Saludables-Tentaciones">Repositorio</a></button>
+                <button class="demoBtn"><a href="https://muracajp.github.io/Saludables-Tentaciones/">Ver demo</a></button>
+            </div>
         </div>
 
         <div class="proyectos">
@@ -215,14 +219,19 @@
     </div>
 
     <div class="proyectosContainer">
+
         <div class="proyectos">
             <img src="images/proyectos/la-cueva.png" alt="foto página web" class="proyectoImg">
         </div>
+
         <div class="detallesContainer">
             <p class="nombreProyecto">La cueva - Landing page</p>
             <p>Proyecto real - Top 10 Desarrollo Web</p>
-            <button class="repoBtn"><a href="https://github.com/MuracaJP/La-Cueva">Repositorio</a></button>
-            <button class="demoBtn"><a href="https://muracajp.github.io/La-Cueva/">Ver demo</a></button>
+            <div>
+                <button class="repoBtn"><a href="https://github.com/MuracaJP/La-Cueva">Repositorio</a></button>
+                <button class="demoBtn"><a href="https://muracajp.github.io/La-Cueva/">Ver demo</a></button>
+            </div>
+            
         </div>
     </div>
 
@@ -231,9 +240,11 @@
         <div class="detallesContainer">
             <p class="nombreProyecto">Encriptador - Primer Challenge Alura Latam</p>
             <p>Encriptador - Alura Latam</p>
-            <button class="repoBtn"><a
-                    href="https://github.com/MuracaJP/Primer-Challenge-Alura">Repositorio</a></button>
-            <button class="demoBtn"><a href="https://muracajp.github.io/Primer-Challenge-Alura/">Ver demo</a></button>
+            <div>
+                <button class="repoBtn"><a href="https://github.com/MuracaJP/Primer-Challenge-Alura">Repositorio</a></button>
+                <button class="demoBtn"><a href="https://muracajp.github.io/Primer-Challenge-Alura/">Ver demo</a></button>
+            </div>
+            
         </div>
 
         <div class="proyectos">
@@ -274,7 +285,7 @@
 <!-- Fin sección contacto-->
 
 <footer class="footer">
-    <h6>Desarrollado por: <a href="https://github.com/MuracaJP" class="gitHubLink" target="blank">Muracajp</a></h6>
+    <h6>Desarrollado por: <a href="https://github.com/MuracaJP" target="blank">Muracajp</a></h6>
 </footer>
 
 <a href="#header"><img src="images/up-arrow-svgrepo-com.svg" alt="flecha apuntando arriba" class="volverInicio"></a>
