--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#hobbies-container">Hobbies</a> </li>
             <li><a href="#formacion-container">Formación</a></li>
             <li><a href="#experiencia-container">Proyectos</a></li>
-            <li><a href="mailto:muracjp@gmail.com">muracjp@gmail.com</a></li>
+            <li><a href="mailto:muracjp@gmail.com">muracajp@gmail.com</a></li>
         </ul>
     </header>
     <!-- Fin Header -->
